[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fireball/Move.png" type="Texture" id=1]
[ext_resource path="res://src/actors/fireball.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=5]
radius = 4.12311

[sub_resource type="Animation" id=2]
resource_name = "FireballMove"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireballMove:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FireballMove:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 2870.61

[sub_resource type="CircleShape2D" id=6]
radius = 71.0634

[node name="FireballKinematic" type="KinematicBody2D"]
position = Vector2( 49, 37 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="FireballMove" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6

[node name="FireballAnimation" type="AnimationPlayer" parent="."]
anims/FireballMove = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="FireBallHomingArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireBallHomingArea2D"]
shape = SubResource( 4 )

[node name="nothomearea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="nothomearea"]
shape = SubResource( 6 )

[connection signal="body_entered" from="FireBallHomingArea2D" to="." method="_on_FireBallHomingArea2D_body_entered"]
[connection signal="body_exited" from="FireBallHomingArea2D" to="." method="_on_FireBallHomingArea2D_body_exited"]
[connection signal="body_entered" from="nothomearea" to="." method="_on_nothomearea_body_entered"]
